Overflow fixes

--- a/front-end/src/app/main-page/album/album.component.css
+++ b/front-end/src/app/main-page/album/album.component.css
@@ -18,6 +18,8 @@
 }
 
 .text h1 {
+  margin-top: 10px;
+  margin-bottom: 0;
   font-size: calc(16px + 2vw);
   font-weight: 750;
   padding-bottom: 1%;
