--- a/front-end/src/app/main-page/home/home.component.css
+++ b/front-end/src/app/main-page/home/home.component.css
@@ -1,6 +1,6 @@
 mat-grid-list {
-  min-width: 800px;
-  height: 45vh;
+  min-width: 1000px;
+  height: 40vh;
 }
 
 mat-card {
@@ -10,6 +10,8 @@ mat-card {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  max-width: calc(100px + 12vw);
+  max-height: calc(80px + 8vw);
 }
 
 mat-card:hover {
@@ -30,6 +32,7 @@ mat-card:hover {
   height: 85%;
   border-radius: 2%;
   object-fit: cover;
+  min-height: 100px;
 }
 
 #song img {
@@ -70,7 +73,8 @@ mat-card:hover {
 
 #album img,
 #song img,
-#playlist img {
+#playlist img,
+#artist img {
   padding-bottom: 10px;
 }
 
@@ -85,7 +89,7 @@ mat-card:hover {
 }
 
 .title .name {
-  width: 100%;
+  width: 90%;
   text-align: center;
   min-height: 18px;
   font-weight: 500;
@@ -94,9 +98,15 @@ mat-card:hover {
   overflow: hidden;
 }
 
-.title div .user {
+.title .link {
+  width: 90%;
   font-style: italic;
   font-weight: 400;
+  text-align: center;
+  min-height: 18px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .link:hover {
