--- a/front-end/src/app/main-page/playlist/playlist.component.css
+++ b/front-end/src/app/main-page/playlist/playlist.component.css
@@ -25,9 +25,14 @@
   font-weight: 750;
   padding-bottom: 1%;
   margin-left: 0;
+  margin-top: 10px;
+  margin-bottom: 0;
 }
 
-.text div {
+.type,
+.creator,
+.size,
+.time {
   display: flex;
   align-items: center;
   padding: 0.5%;
@@ -43,6 +48,14 @@
 .creator {
   font-style: italic;
   font-size: calc(12px + 0.3vw);
+}
+
+.creator .link {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: calc(120px + 12vw);
+  margin-left: 4px;
 }
 
 .size {
